문법 테스트/miniCParser.java
// Generated from miniC.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class miniCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, WS=38, IDENT=39, 
		NUMBER=40;
	public static final int
		RULE_mini_c = 0, RULE_translation_unit = 1, RULE_external_dcl = 2, RULE_function_def = 3, 
		RULE_function_header = 4, RULE_dcl_spec = 5, RULE_dcl_specifiers = 6, 
		RULE_dcl_specifier = 7, RULE_type_qualifier = 8, RULE_type_specifier = 9, 
		RULE_function_name = 10, RULE_formal_param = 11, RULE_opt_formal_param = 12, 
		RULE_formal_param_list = 13, RULE_param_dcl = 14, RULE_compound_st = 15, 
		RULE_opt_dcl_list = 16, RULE_declaration_list = 17, RULE_declaration = 18, 
		RULE_init_dcl_list = 19, RULE_init_declarator = 20, RULE_declarator = 21, 
		RULE_opt_number = 22, RULE_opt_stat_list = 23, RULE_statement_list = 24, 
		RULE_statement = 25, RULE_expression_st = 26, RULE_opt_expression = 27, 
		RULE_if_st = 28, RULE_while_st = 29, RULE_return_st = 30, RULE_expression = 31, 
		RULE_assignment_exp = 32, RULE_logical_or_exp = 33, RULE_logical_and_exp = 34, 
		RULE_equality_exp = 35, RULE_relational_exp = 36, RULE_additive_exp = 37, 
		RULE_multiplicative_exp = 38, RULE_unary_exp = 39, RULE_postfix_exp = 40, 
		RULE_opt_actual_param = 41, RULE_actual_param = 42, RULE_actual_param_list = 43, 
		RULE_primary_exp = 44;
	private static String[] makeRuleNames() {
		return new String[] {
			"mini_c", "translation_unit", "external_dcl", "function_def", "function_header", 
			"dcl_spec", "dcl_specifiers", "dcl_specifier", "type_qualifier", "type_specifier", 
			"function_name", "formal_param", "opt_formal_param", "formal_param_list", 
			"param_dcl", "compound_st", "opt_dcl_list", "declaration_list", "declaration", 
			"init_dcl_list", "init_declarator", "declarator", "opt_number", "opt_stat_list", 
			"statement_list", "statement", "expression_st", "opt_expression", "if_st", 
			"while_st", "return_st", "expression", "assignment_exp", "logical_or_exp", 
			"logical_and_exp", "equality_exp", "relational_exp", "additive_exp", 
			"multiplicative_exp", "unary_exp", "postfix_exp", "opt_actual_param", 
			"actual_param", "actual_param_list", "primary_exp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'const'", "'int'", "'void'", "'('", "')'", "','", "'{'", "'}'", 
			"';'", "'='", "'['", "']'", "'if'", "'else'", "'while'", "'return'", 
			"'+='", "'-='", "'*='", "'/='", "'%='", "'||'", "'&&'", "'=='", "'!='", 
			"'>'", "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", 
			"'++'", "'--'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "WS", "IDENT", "NUMBER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "miniC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public miniCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Mini_cContext extends ParserRuleContext {
		public Mini_cContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mini_c; }
	 
		public Mini_cContext() { }
		public void copyFrom(Mini_cContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PROGRAMContext extends Mini_cContext {
		public Translation_unitContext translation_unit() {
			return getRuleContext(Translation_unitContext.class,0);
		}
		public PROGRAMContext(Mini_cContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).enterPROGRAM(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).exitPROGRAM(this);
		}
	}

	public final Mini_cContext mini_c() throws RecognitionException {
		Mini_cContext _localctx = new Mini_cContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mini_c);
		try {
			_localctx = new PROGRAMContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			translation_unit(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Translation_unitContext extends ParserRuleContext {
		public External_dclContext external_dcl() {
			return getRuleContext(External_dclContext.class,0);
		}
		public Translation_unitContext translation_unit() {
			return getRuleContext(Translation_unitContext.class,0);
		}
		public Translation_unitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translation_unit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).enterTranslation_unit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).exitTranslation_unit(this);
		}
	}

	public final Translation_unitContext translation_unit() throws RecognitionException {
		return translation_unit(0);
	}

	private Translation_unitContext translation_unit(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Translation_unitContext _localctx = new Translation_unitContext(_ctx, _parentState);
		Translation_unitContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_translation_unit, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(93);
			external_dcl();
			}
			_ctx.stop = _input.LT(-1);
			setState(99);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Translation_unitContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_translation_unit);
					setState(95);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(96);
					external_dcl();
					}
					} 
				}
				setState(101);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class External_dclContext extends ParserRuleContext {
		public Function_defContext function_def() {
			return getRuleContext(Function_defContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public External_dclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_external_dcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).enterExternal_dcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).exitExternal_dcl(this);
		}
	}

	public final External_dclContext external_dcl() throws RecognitionException {
		External_dclContext _localctx = new External_dclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_external_dcl);
		try {
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				function_def();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				declaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_defContext extends ParserRuleContext {
		public Function_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_def; }
	 
		public Function_defContext() { }
		public void copyFrom(Function_defContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FUNC_DEFContext extends Function_defContext {
		public Function_headerContext function_header() {
			return getRuleContext(Function_headerContext.class,0);
		}
		public Compound_stContext compound_st() {
			return getRuleContext(Compound_stContext.class,0);
		}
		public FUNC_DEFContext(Function_defContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).enterFUNC_DEF(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).exitFUNC_DEF(this);
		}
	}

	public final Function_defContext function_def() throws RecognitionException {
		Function_defContext _localctx = new Function_defContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function_def);
		try {
			_localctx = new FUNC_DEFContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			function_header();
			setState(107);
			compound_st();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_headerContext extends ParserRuleContext {
		public Function_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_header; }
	 
		public Function_headerContext() { }
		public void copyFrom(Function_headerContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FUNC_HEADContext extends Function_headerContext {
		public Dcl_specContext dcl_spec() {
			return getRuleContext(Dcl_specContext.class,0);
		}
		public Function_nameContext function_name() {
			return getRuleContext(Function_nameContext.class,0);
		}
		public Formal_paramContext formal_param() {
			return getRuleContext(Formal_paramContext.class,0);
		}
		public FUNC_HEADContext(Function_headerContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).enterFUNC_HEAD(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).exitFUNC_HEAD(this);
		}
	}

	public final Function_headerContext function_header() throws RecognitionException {
		Function_headerContext _localctx = new Function_headerContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function_header);
		try {
			_localctx = new FUNC_HEADContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			dcl_spec();
			setState(110);
			function_name();
			setState(111);
			formal_param();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dcl_specContext extends ParserRuleContext {
		public Dcl_specContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl_spec; }
	 
		public Dcl_specContext() { }
		public void copyFrom(Dcl_specContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DCL_SPECIContext extends Dcl_specContext {
		public Dcl_specifiersContext dcl_specifiers() {
			return getRuleContext(Dcl_specifiersContext.class,0);
		}
		public DCL_SPECIContext(Dcl_specContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).enterDCL_SPECI(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).exitDCL_SPECI(this);
		}
	}

	public final Dcl_specContext dcl_spec() throws RecognitionException {
		Dcl_specContext _localctx = new Dcl_specContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dcl_spec);
		try {
			_localctx = new DCL_SPECIContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			dcl_specifiers(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dcl_specifiersContext extends ParserRuleContext {
		public Dcl_specifierContext dcl_specifier() {
			return getRuleContext(Dcl_specifierContext.class,0);
		}
		public Dcl_specifiersContext dcl_specifiers() {
			return getRuleContext(Dcl_specifiersContext.class,0);
		}
		public Dcl_specifiersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl_specifiers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).enterDcl_specifiers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).exitDcl_specifiers(this);
		}
	}

	public final Dcl_specifiersContext dcl_specifiers() throws RecognitionException {
		return dcl_specifiers(0);
	}

	private Dcl_specifiersContext dcl_specifiers(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Dcl_specifiersContext _localctx = new Dcl_specifiersContext(_ctx, _parentState);
		Dcl_specifiersContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_dcl_specifiers, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(116);
			dcl_specifier();
			}
			_ctx.stop = _input.LT(-1);
			setState(122);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Dcl_specifiersContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_dcl_specifiers);
					setState(118);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(119);
					dcl_specifier();
					}
					} 
				}
				setState(124);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Dcl_specifierContext extends ParserRuleContext {
		public Type_qualifierContext type_qualifier() {
			return getRuleContext(Type_qualifierContext.class,0);
		}
		public Type_specifierContext type_specifier() {
			return getRuleContext(Type_specifierContext.class,0);
		}
		public Dcl_specifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl_specifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).enterDcl_specifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).exitDcl_specifier(this);
		}
	}

	public final Dcl_specifierContext dcl_specifier() throws RecognitionException {
		Dcl_specifierContext _localctx = new Dcl_specifierContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dcl_specifier);
		try {
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				type_qualifier();
				}
				break;
			case T__1:
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				type_specifier();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_qualifierContext extends ParserRuleContext {
		public Type_qualifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_qualifier; }
	 
		public Type_qualifierContext() { }
		public void copyFrom(Type_qualifierContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CONST_NODEContext extends Type_qualifierContext {
		public CONST_NODEContext(Type_qualifierContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).enterCONST_NODE(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).exitCONST_NODE(this);
		}
	}

	public final Type_qualifierContext type_qualifier() throws RecognitionException {
		Type_qualifierContext _localctx = new Type_qualifierContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_type_qualifier);
		try {
			_localctx = new CONST_NODEContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_specifierContext extends ParserRuleContext {
		public Type_specifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_specifier; }
	 
		public Type_specifierContext() { }
		public void copyFrom(Type_specifierContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class INT_NODEContext extends Type_specifierContext {
		public INT_NODEContext(Type_specifierContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).enterINT_NODE(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).exitINT_NODE(this);
		}
	}
	public static class VOID_NODEContext extends Type_specifierContext {
		public VOID_NODEContext(Type_specifierContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).enterVOID_NODE(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).exitVOID_NODE(this);
		}
	}

	public final Type_specifierContext type_specifier() throws RecognitionException {
		Type_specifierContext _localctx = new Type_specifierContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_type_specifier);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				_localctx = new INT_NODEContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				match(T__1);
				}
				break;
			case T__2:
				_localctx = new VOID_NODEContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_nameContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(miniCParser.IDENT, 0); }
		public Function_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).enterFunction_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).exitFunction_name(this);
		}
	}

	public final Function_nameContext function_name() throws RecognitionException {
		Function_nameContext _localctx = new Function_nameContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_function_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Formal_paramContext extends ParserRuleContext {
		public Formal_paramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formal_param; }
	 
		public Formal_paramContext() { }
		public void copyFrom(Formal_paramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FORMAL_PARAMETERContext extends Formal_paramContext {
		public Opt_formal_paramContext opt_formal_param() {
			return getRuleContext(Opt_formal_paramContext.class,0);
		}
		public FORMAL_PARAMETERContext(Formal_paramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).enterFORMAL_PARAMETER(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).exitFORMAL_PARAMETER(this);
		}
	}

	public final Formal_paramContext formal_param() throws RecognitionException {
		Formal_paramContext _localctx = new Formal_paramContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_formal_param);
		try {
			_localctx = new FORMAL_PARAMETERContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(T__3);
			setState(138);
			opt_formal_param();
			setState(139);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Opt_formal_paramContext extends ParserRuleContext {
		public Formal_param_listContext formal_param_list() {
			return getRuleContext(Formal_param_listContext.class,0);
		}
		public Opt_formal_paramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opt_formal_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).enterOpt_formal_param(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).exitOpt_formal_param(this);
		}
	}

	public final Opt_formal_paramContext opt_formal_param() throws RecognitionException {
		Opt_formal_paramContext _localctx = new Opt_formal_paramContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_opt_formal_param);
		try {
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				formal_param_list(0);
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Formal_param_listContext extends ParserRuleContext {
		public Param_dclContext param_dcl() {
			return getRuleContext(Param_dclContext.class,0);
		}
		public Formal_param_listContext formal_param_list() {
			return getRuleContext(Formal_param_listContext.class,0);
		}
		public Formal_param_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formal_param_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).enterFormal_param_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof miniCListener ) ((miniCListener)listener).exitFormal_param_list(this);
		}
	}

	public final Formal_param_listContext formal_param_list() throws RecognitionException {
		return formal_param_list(0);
	}
